[tool.poetry]
name = "reddit-long-covid-exploration"
version = "0.1.0"
description = ""
authors = ["David Russell <davidrussell327@gmail.com>"]
readme = "README.md"
packages = [{include = "reddit_long_covid_exploration"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
wordfreq = "^3.1.1"
tqdm = "^4.67.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
